# designussy

./: .env  .env.example  ASSETS_GUIDE.md  HANDOFF.md  HANDOFF.old.md  HANDOFF_P2T1.txt  README.md  agents.md  backend.py  clean_backend.py  cleanup_duplicates.ps1  devplan.md  diversity_test.html  diversity_tracking.db  fix_docstrings.py  generate_assets.py  generate_new_samples.py  llm_director.py  migration_log_20251124_143924.txt  new_assets_demo.html  performance_report.txt  playwright.config.js  pyproject.toml  pytest.ini  test_batch_api.py  test_diversity.py  test_diversity_system.py  test_modular_generators.py  test_phase2_implementation.py  test_phase3_integration.py  test_type_aware_system.py  test_type_system.py  test_upgraded_system.py  unwritten_worlds_design_system.md  unwritten_worlds_editor.html  unwritten_worlds_effects_library.html  unwritten_worlds_interactive_demo.html  unwritten_worlds_loading_examples.html  unwritten_worlds_logos.html  unwritten_worlds_v2.html
.github/workflows/: test.yml
assets/css/: unwritten_worlds.css  unwritten_worlds_common.css
assets/js/: unwritten_worlds_assets.js  unwritten_worlds_common.js  unwritten_worlds_core.js
docs/: QUICK_WINS.md  STATUS.md  advanced_parameters.md  asset_metadata.md  asset_structure.md  batch_api.md  caching.md  design.json  design.md  devplan.md  devplan_types_and_diversity.md  generators.md  interactive_preview_system.md  performance.md  testing.md
docs/phases/: phase1.yaml  phase2.yaml  phase3.yaml
enhanced_design/: element_types.py  index.html  type_registry.py
frontend/components/react/: Asset  AssetDisplay.jsx  AssetEditor.jsx  BatchGenerator.jsx  Diversity  (+6 more)
frontend/styles/: preview-system.css
frontend/utils/: LivePreviewManager.js  api-client.js  formatters.js  validators.js
generators/: __init__.py  base_generator.py  color_utils.py  config.py  directed_generator.py  diversity_optimizer.py  dynamic_loader.py  enso_generator.py  example_generator.py  factory.py  fast_generators.py  giraffe_generator.py  kangaroo_generator.py  parchment_generator.py  presets.py  registry.py  schemas.py  sigil_generator.py  type_batch_generator.py  variation_strategies.py
llm/: type_creator.py  type_improver.py  type_validator.py
llm/prompts/: type_creation_prompts.py
scripts/: migrate_assets.py  profile_generators.py
storage/: asset_storage.py  diversity_tracker.py  export_import.py  metadata_schema.py  search.py  tag_manager.py  versioning.py
storage/animations/: __init__.py
storage/types/: __init__.py  enso_v1.json  giraffe_v1.json  parchment_v1.json  sigil_v1.json  type_registry.db
tests/: conftest.py  performance_tests.py  test_advanced_parameters.py  test_asset_metadata.py
tests/e2e/: __init__.py  conftest.py  global-setup.js  global-teardown.js  test_batch_workflows.py  test_cache_workflows.py  test_error_handling.py  test_generation_workflows.py  test_ui_interactions.py  utils.py
tests/test_api/: __init__.py  test_endpoints.py
tests/test_batch/: __init__.py  test_batch
tests/test_cache/: __init__.py  test_lru_cache.py
tests/test_generators/: __init__.py  test  test_base_generator.py  test_enso_generator.py  test_giraffe_generator.py  test_kangaroo_generator.py  test_parchment_generator.py  test_sigil_generator.py
tests/test_integration/: test_workflows.py
tests/test_utils/: __init__.py
upgraded_asset_system/: asset_dsl.py  assets_builtin.py  generate_assets_upgraded.py  upgraded_core.py
upgraded_asset_system/dsl_specs/: astral_portal_dsl.json  example_asset.json  phoenix_sigils.json
utils/: batch_job.py  cache.py  diversity_metrics.py  diversity_viz.py
(+11 files in other folders)
